--- a/resource/views/auth/register.ejs
+++ b/resource/views/auth/register.ejs
@@ -1,5 +1,50 @@
 <%- include('./../partials/header') -%>
 
-    <h1>عضویت در سایت</h1>
+    <div class="container">
+        <div class="row pt-5 justify-content-center">
+            <div class="col-8">
+                <div class="card card-default">
+                    <div class="card-header">
+                        <h5>عضویت در سایت</h5>
+                    </div>
+                    <div class="card-body">
+                        <form action="/register" class="form-horizontal" method="POST" novalidate>
+                            <% if(errors.length > 0) { %>
+                                <div class="alert alert-danger alert-dismissible" role="alert">
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                                    <% errors.forEach(error => { %>
+                                        <%= error %></br>
+                                            <% }); %>
+                                </div>
+                                <% } %>
 
-<%- include('./../partials/footer') -%>
+                                    <div class="col-12 mb-2">
+                                        <label for="name" class="form-label">نام و نام خانوادگی</label>
+                                        <input type="text" id="name" class="form-control" name="name" value="" required
+                                            autofocus="">
+                                    </div>
+
+                                    <div class="col-12 mb-2">
+                                        <label for="email" class="form-label">آدرس ایمیل</label>
+                                        <input type="email" id="email" class="form-control" name="email" value=""
+                                            required="">
+                                    </div>
+
+                                    <div class="col-12 mb-2">
+                                        <label for="password" class="form-label">پسورد</label>
+                                        <input type="password" id="password" class="form-control" name="password"
+                                            required="">
+                                    </div>
+
+                                    <div class="col-12 mt-3">
+                                        <button type="submit" class="btn btn-primary">عضویت</button>
+                                    </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <%- include('./../partials/footer') -%>
