--- a/resource/views/partials/header.ejs
+++ b/resource/views/partials/header.ejs
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
         <div class="container">
-            <a class="navbar-brand" href="#">مجله آموزشی گیگاکد</a>
+            <a class="navbar-brand" href="/">مجله آموزشی گیگاکد</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
