Implement local login and register

--- a/resource/views/auth/login.ejs
+++ b/resource/views/auth/login.ejs
@@ -1,5 +1,53 @@
 <%- include('./../partials/header') -%>
 
-    <h1>ورود به سایت</h1>
+    <div class="container">
+        <div class="row pt-5 justify-content-center">
+            <div class="col-8">
+                <div class="card card-default">
+                    <div class="card-header">
+                        <h5>ورود به سایت</h5>
+                    </div>
+                    <div class="card-body">
+                        <form action="/login" class="form-horizontal" method="POST" novalidate>
+                            <%- include('./../layouts/errors') -%>
+                            <div class="col-12 mb-2">
+                                <label for="email" class="form-label">آدرس ایمیل</label>
+                                <input type="email" id="email" class="form-control" name="email" value="" required autofocus>
+                            </div>
 
-<%- include('./../partials/footer') -%>
+                            <div class="col-12 mb-2">
+                                <label for="password" class="form-label">پسورد</label>
+                                <input type="password" id="password" class="form-control" name="password" required>
+                            </div>
+
+                            
+                            <div class="col-12 mb-2">
+                                <%- captchaDisplayDOM %>
+                            </div>
+
+                            <div class="col-12 mb-2">
+                                <div class="checkbox">
+                                    <input type="checkbox" name="remember">
+                                    <label for="">یادآوری ورود</label>
+                                </div>
+                            </div>
+
+                            <div class="col-12 mt-3">
+                                <button type="submit" class="btn btn-primary">ورود</button>
+                                <a href="#" class="btn btn-danger">
+                                    ورود با اکانت گوگل
+                                </a>
+                                <a href="#" class="btn btn-link">
+                                    رمز عبور را فراموش کرده‌ام
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <%- displayTag %>
+
+    <%- include('./../partials/footer') -%>
