Add auth check into frontend

--- a/resource/views/partials/header.ejs
+++ b/resource/views/partials/header.ejs
@@ -34,8 +34,13 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="btn btn-success btn-sm me-2" href="/login">ورود</a></li>
-                    <li><a class="btn btn-primary btn-sm" href="/register">عضویت</a></li>
+                    <% if(auth.check) { %>
+                        <li><a class="btn btn-success btn-sm me-2" href="/admin">پنل کاربری</a></li>
+                        <li><a class="btn btn-danger btn-sm" href="/logout">خروج</a></li>    
+                    <% } else { %>
+                        <li><a class="btn btn-success btn-sm me-2" href="/login">ورود</a></li>
+                        <li><a class="btn btn-primary btn-sm" href="/register">عضویت</a></li>
+                    <% } %>
                 </ul>
             </div>
         </div>
