Add express layout pages and config

--- a/resource/views/home/master.ejs
+++ b/resource/views/home/master.ejs
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
         type="text/css" />
     <link rel="stylesheet" href="/css/home.css">
-    <title>مجله آموزشی گیگاکد</title>
+    <%- style %>
+    <title><%- defineContent('title') || config.title %></title>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">صفحه اصلی</a>
+                        <a class="nav-link active" aria-current="page" href="/">صفحه اصلی</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">دوره‌ها</a>
@@ -45,3 +46,13 @@
             </div>
         </div>
     </nav>
+
+    <div class="container">
+        <%- body %> 
+    </div>
+
+<script src="/js/popper.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+</body>
+<%- script %>
+</html>
