--- a/resource/views/home/auth/register.ejs
+++ b/resource/views/home/auth/register.ejs
@@ -5,7 +5,7 @@
                 <h5>عضویت در سایت</h5>
             </div>
             <div class="card-body">
-                <form action="/register" class="form-horizontal" method="POST" novalidate>
+                <form action="/auth/register" class="form-horizontal" method="POST" novalidate>
                     <%- include('./../layouts/errors') -%>
                         <div class="col-12 mb-2">
                             <label for="name" class="form-label">نام و نام خانوادگی</label>
