--- a/resource/views/home/master.ejs
+++ b/resource/views/home/master.ejs
@@ -39,8 +39,8 @@
                         <li><a class="btn btn-success btn-sm me-2" href="/admin">پنل کاربری</a></li>
                         <li><a class="btn btn-danger btn-sm" href="/logout">خروج</a></li>    
                     <% } else { %>
-                        <li><a class="btn btn-success btn-sm me-2" href="/login">ورود</a></li>
-                        <li><a class="btn btn-primary btn-sm" href="/register">عضویت</a></li>
+                        <li><a class="btn btn-success btn-sm me-2" href="/auth/login">ورود</a></li>
+                        <li><a class="btn btn-primary btn-sm" href="/auth/register">عضویت</a></li>
                     <% } %>
                 </ul>
             </div>
