--- a/resource/views/home/auth/login.ejs
+++ b/resource/views/home/auth/login.ejs
@@ -32,10 +32,10 @@
 
                         <div class="col-12 mt-3">
                             <button type="submit" class="btn btn-primary">ورود</button>
-                            <a href="#" class="btn btn-danger">
+                            <a href="/auth/google" class="btn btn-danger">
                                 ورود با اکانت گوگل
                             </a>
-                            <a href="/login/google" class="btn btn-link">
+                            <a href="#" class="btn btn-link">
                                 رمز عبور را فراموش کرده‌ام
                             </a>
                         </div>
