Auth with google OAuth

--- a/resource/views/home/auth/register.ejs
+++ b/resource/views/home/auth/register.ejs
@@ -29,6 +29,9 @@
 
                         <div class="col-12 mt-3">
                             <button type="submit" class="btn btn-primary">عضویت</button>
+                            <a href="/auth/google" class="btn btn-danger">
+                                ورود با اکانت گوگل
+                            </a>
                         </div>
                 </form>
             </div>
