Send reset pass email and add pass reset page

--- a/resource/views/home/auth/login.ejs
+++ b/resource/views/home/auth/login.ejs
@@ -35,7 +35,7 @@
                             <a href="/auth/google" class="btn btn-danger">
                                 ورود با اکانت گوگل
                             </a>
-                            <a href="#" class="btn btn-link">
+                            <a href="/auth/password/email" class="btn btn-link">
                                 رمز عبور را فراموش کرده‌ام
                             </a>
                         </div>
